Add description in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Samuel Reyes Suárez",
+	"description": "A projects to learn npm basics",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
